--- a/calparkshome1.htm
+++ b/calparkshome1.htm
@@ -20,7 +20,6 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #1A5276;
-    background-color: #1A5276;
 }
 
 li {
@@ -59,14 +58,14 @@ li a:hover {
 </ul><br>
 <br>
 
-<h1><font size="12" color="black" face="helvetica" ><center>California's National Parks</> </h1>
+        <h1><font size="12" color="black" face="helvetica"><center>California's National Parks</center></font></h1>
  
 <table class="centered-table" cellpadding="100">
 <tr>
 <td align="center" valign="center">
 <img src="redwood.jpeg"width="200"height="200" alt="Redwood" class="circular-image"/>
-<br />
-<font size="5"><strong><div>Redwood National Park</div>
+<br/>
+        <font size="5"><strong><div>Redwood National Park</div></strong>
 </td>
 <td align="center" valign="center">
 <img src="yosemite.jpg"width="200"height="200" alt="Yosemite"class="circular-image"/>
