Update Point Reyes Page 1.htm

--- a/Point Reyes Page 1.htm
+++ b/Point Reyes Page 1.htm
@@ -4,13 +4,48 @@
 		<meta charset="UTF-8">		
 		<link rel="stylesheet" href="../css/file4.css">	
 		<title>Point Reyes</title>
-		<head> 
+		<style>
+		ul {
+    list-style-type: none;
+    margin: 0 auto;
+    width:4000px;
+    padding: 0;
+    overflow: hidden;
+    background-color: #1A5276;
+}
+li {
+    float: left;
+}
+li a {
+    display: block;
+    color: white;
+    text-align: left;
+    padding: 30px 40px ;
+    text-decoration: none;
+    font-family: helvetica;
+    font-size: large;
+}
+li a:hover {
+    background-color: #797D7F;
+}
+		</style>
+		</head> 
 		<body>		
-		<header>		
+		
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#redwood">Redwood National Park</a></li>
+  <li><a href="#yosemite">Yosemite</a></li>
+  <li><a href="#point">Point Reyes</a></li>
+  <li><a href="#channel">Channel Islands</a></li>
+</ul><br>
+			
+			
+			
 		<h2>Point Reyes<h2>	
 		<h3>Point Reyes<h3>
 		<p>Inverness CA.</p>
-		</header>
+		
 		<table>
 		<tr>
 			<th>
