--- a/pointreyes1.htm
+++ b/pointreyes1.htm
@@ -17,8 +17,8 @@
 			
 			
 			
-		<h2>Point Reyes<h2>	
-		<h3>Point Reyes<h3>
+		<h2>Point Reyes</h2>	
+		<h3>Point Reyes</h3>
 		<p>Inverness CA.</p>
 		
 		<table>
