--- a/Point Reyes Page 2.htm
+++ b/Point Reyes Page 2.htm
@@ -3,9 +3,17 @@
 	<head>
 		<meta charset="UTF-8">		
 		<link rel="stylesheet" href="../css/file4.css">	
+		<link rel="stylesheet" href="../css/header.css">
 		<title>Point Reyes</title>
-		<head> 
-		<body>		
+		</head> 
+		<body>	
+			<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#redwood">Redwood National Park</a></li>
+  <li><a href="#yosemite">Yosemite</a></li>
+  <li><a href="#point">Point Reyes</a></li>
+  <li><a href="#channel">Channel Islands</a></li>
+</ul><br>
 		<header>		
 		<h2>Point Reyes<h2>	
 		<h3>1 Bear Valley Rd.<h3>
