--- a/pointreyes1.htm
+++ b/pointreyes1.htm
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">		
 		<link rel="stylesheet" href="../css/file4.css">	
+		<link rel="stylesheet" href="../css/header.css">
 		<title>Point Reyes</title>
 		</head> 
 		<body>		
