--- a/redwoods1.htm
+++ b/redwoods1.htm
@@ -2,11 +2,19 @@
 <html>
 	<head>
 		<meta charset="UTF-8">	
-		<link rel="stylesheet" href="../css/file.css">	
+		<link rel="stylesheet" href="../css/file.css">
+		<link rel="stylesheet" href="../css/header.css">
 		<title>The Redwoods</title>	
 			<meta name="viewport" content="width=device-width, inital-scale=1.0px">
 	</head>
-		<body style="background-color:powderblue;">		
+		<body style="background-color:powderblue;">
+			<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#redwood">Redwood National Park</a></li>
+  <li><a href="#yosemite">Yosemite</a></li>
+  <li><a href="#point">Point Reyes</a></li>
+  <li><a href="#channel">Channel Islands</a></li>
+</ul><br>
 		<header>		
 		<h1>National Parks 100 years Celebration</h1>
 		<article>
