--- a/channel3.htm
+++ b/channel3.htm
@@ -5,9 +5,7 @@
 		<title>The Channel Islands</title>
 		<h1>Accommodations and Activities Directory</h1>
 		<link rel="stylesheet" href="../css/file6.css">	
-		<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-   		<script src="/scripts/jquery.min.js"></script>
-	   	<script src="/bootstrap/js/bootstrap.min.js"></script>			<meta name="viewport" content="width=device-width, inital-scale=1.0px">
+		<meta name="viewport" content="width=device-width, inital-scale=1.0px">
 		<head> 
 		<body style="background-color: powderblue;">
 		<div id="page-wrap">	
