added Lenora's yosemite pages

--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
 	<li><a href="./html/channel1.htm">channel1.htm</a></li>
 	<li><a href="./html/channel2.htm">channel2.htm</a></li>
 	<li><a href="./html/channel3.htm">channel3.htm</a></li>
+	<li><a href="./html/yosemite1.htm">yosemite1.htm</a></li>
+	<li><a href="./html/yosemite2.htm">yosemite2.htm</a></li>
 </ul>
