--- a/html/yosemite2.htm
+++ b/html/yosemite2.htm
@@ -55,7 +55,7 @@
 		<div>
 		<p>
 			Birds
-			Point Reyes National Seashore offers some of the finest birdwatching in the United States. More than 70,000 acres of habitat harbor an incredible variety of bird life. Nearly 490 avian species have been observed in the park and on adjacent waters.	The park's coastal location and its wealth of unspoiled habitats, estuaries, grasslands, coastal scrub and forest all attract many migrating and wintering birds. The projection of the peninsula some 10 miles seaward from the "mainland" makes Point Reyes National Seashore a landing spot for many vagrants—birds that may have made errors in navigation and thus are unexpected in this area.
+			In Yosemite, National Park when Bird watching the more sought-after birds include the: great gray owl, spotted owl, peregrine falcon, pileated woodpecker, and northern goshawk. Yosemite is habitat for over165 species of migrating, wintering, and breeding birds. Most regularly seen resident birds include: Steller's Jay, American Robin, Acorn Woodpecker, Common Raven, and Mountain Chickadee. In spring, look for the bright red wing patches on the Red-Winged Blackbird (most often seen in wet meadows) or the tropical looking Western Tanager flying about the conifers. Near rivers and streams, watch the American Dipper dart in and out of rapids and listen for their beautiful melodious song
 		</p>
 		</div>
 		<div>
