--- a/html/channel1.htm
+++ b/html/channel1.htm
@@ -54,16 +54,18 @@
 		<div>
 			<p>
 				The Story:
+				
 				Channel Islands National Park is home to a wide variety of significant 
-				natural and cultural resources. It was designated a U.S. National Monument 
-				on April 26, 1938, and a National Biosphere Reserve in 1976. It was promoted 
-				to a National Park on March 5, 1980. Channel Islands National Marine
-				Sanctuary encompasses the waters six nautical miles around Channel Islands
-				National Park.
-				Channel Islands National Park comprises 5 ecologically rich islands off the 
-				Southern California coast. Anacapa Island has trails to a 1932 lighthouse 
-				and clifftop Inspiration Point. Santa Cruz Island’s many sea caves include
-				the vast Painted Cave. Santa Rosa Island features rare Torrey pines. 
+				natural and cultural resources.Five islands off the Southern California
+				coast comprise one of America’s most remote—and utterly magical—national parks
+				It was designated a U.S. National Monument on April 26, 1938, and a National
+				Biosphere Reserve in 1976. It was promoted to a National Park on March 5, 1980.
+			</p>
+			<p>
+				About The Islands:				
+				Anacapa Island has trails to a 1932 lighthouse and clifftop Inspiration Point.
+				Santa Cruz Island’s many sea caves include the vast Painted Cave.
+				Santa Rosa Island features rare Torrey pines. 
 				Thousands of seals gather at San Miguel Island’s Point Bennett. 
 				Southernmost Santa Barbara Island draws nesting seabirds.
 			</p>
@@ -72,19 +74,14 @@
 				discovered in 1959 on Santa Rosa Island.
 				The Channel Islands were created by tectonic forces, which caused them to 
 				rise up out of the ocean five million years ago. They have always been 
-				islands separate from the mainland, and thus have unique plants and animals found nowhere else on Earth.				
+				islands separate from the mainland, and thus have unique plants and 
+				animals found nowhere else on Earth.				
 			</p>
 			<p>
-				How to Visit
-				Five islands off the Southern California coast comprise one 
-				of America’s most remote—and utterly magical—national parks.
+				How to Visit				.
 				Visitors arrive on the islands by boat (boats depart regularly 
 				from Ventura and Oxnard) or small plane, then use their hiking boots 
-				or kayaks to get around. Revered for its endemic plants and plentiful
-				wildlife, the “Galapagos of North America” has no lodgings, stores, or 
-				restaurants—a place that draws you in without a lot of extra trappings. 
-				On this ocean sanctuary, it’s all about wraparound beauty, solitude, 
-				and the chance to totally and completely unplug.
+				or kayaks to get around.
 				</p>
 			    <p>
 				When & How to Go:
