--- a/html/channel1.htm
+++ b/html/channel1.htm
@@ -130,7 +130,7 @@
 					https://www.nps.gov/chis/planyourvisit/calendar.htm
 					https://www.nps.gov/chis/planyourvisit/maps.htm
 					https://www.nps.gov/chis/planyourvisit/weather.htm
-				    https://www.nps.gov/chis/planyourvisit/limiting-your-impact.htm
+					https://www.nps.gov/chis/planyourvisit/limiting-your-impact.htm
 <footer>				
 				</p> 
 				CONTACT THE PARK
@@ -143,8 +143,8 @@
 			</div>
 </footer>
 				
-link:https://www.nps.gov/redw/learn/management/centennial-initiative-2016.htm
-link:https://www.nps.gov/planyourvisit/index.htm
+<li>link:https://www.nps.gov/redw/learn/management/centennial-initiative-2016.htm</li>
+<li>link:https://www.nps.gov/planyourvisit/index.htm</li>
 
 </body>
 </html>
