--- a/html/yosemite1.htm
+++ b/html/yosemite1.htm
@@ -8,40 +8,40 @@
 		<body>		
 		<header>		
 		<h2>Yosemite<h2>	
-		<h3>yosemite<h3>
+		<h3>Yosemite<h3>
 		<p> CA.</p>
 		</header>
 		<table>
 		<tr>
 			<th>
 				<a href="https://www.nps.gov/yose/planyourvisit/glacierpoint.htm">
-				<img class="img-responsive" src="..\img\Yosemite Glacier Point.jpg" 
+				<img class="img-responsive" title="Glacier Point" src="..\img\Yosemite Glacier Point.jpg" 
 				style="width:150px;height:108px;">
 				</a>
 			</th>
 			<th>
 				<a href="https://www.nps.gov/pore/planyourvisit/MariposaGrove.htm">
-				<img class="img-responsive" src="..\img\Yosemite Mariposa Grove.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" title="Mariposa Grove" src="..\img\Yosemite Mariposa Grove.jpg" style="width:150px;height:108px;">
 				</a>
 			</th>
 			<th>
 				<a href="https://www.nps.gov/yose/learn/nature/tuolumne.htm">
-				<img class="img-responsive" src="..\img\Yosemite Tuolumne Meadows.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" title="Tuolumne" src="..\img\Yosemite Tuolumne Meadows.jpg" style="width:150px;height:108px;">
 				</a>
 			</th>
 			<th>
 				<a href="https://www.nps.gov/yose/planyourvisit/halfdome.htm">
-				<img class="img-responsive" src="..\img\Yosemite Half Dome.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" title="Half Dome" src="..\img\Yosemite Half Dome.jpg" style="width:150px;height:108px;">
 				</a>
 			</th>
 			<th>		
 				<a href="https://www.nps.gov/yose/planyourvisit/viewpoints.htm">		
-				<img class="img-responsive" src="..\img\Yosemite ViewPoint.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" title="Viewpoint" src="..\img\Yosemite ViewPoint.jpg" style="width:150px;height:108px;">
 				</a>
 			</th>
 			<th>
 				<a href="https://www.nps.gov/yose/planyourvisit/formations.htm">
-				<img class="img-responsive" src="..\img\Yosemite Rock Formation.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" title="Formations" src="..\img\Yosemite Rock Formation.jpg" style="width:150px;height:108px;">
 				</a>
 			</th>
 		</tr>
