--- a/html/yosemite1.htm
+++ b/html/yosemite1.htm
@@ -46,7 +46,7 @@
 			</th>
 		</tr>
 		</table>
-		https://www.youtube.com/watch?v=2GmipPf-Krk
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/2GmipPf-Krk" frameborder="0" allowfullscreen></iframe>
 		<div>
 		<p>
 		The Story
