--- a/html/channel1.htm
+++ b/html/channel1.htm
@@ -8,40 +8,38 @@
 		<body>		
 		<header>		
 		<h2>The Channel Islands<h2>	
-		<h3>The Channel Islands<h3>
-		<p>Ventura  CA.</p>
 		</header>
 		<table>
 		<tr>
 			<th>
 				<a href="https://www.nps.gov/chis/planyourvisit/visitorcenters.htm">
-				<img class="img-responsive" src="..\img\Channel Island Vistor Center.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" title"Visitor Center" src="..\img\Channel Island Vistor Center.jpg" style="width:150px;height:108px;">
 				</a>
 			</th>
 			<th>
 				<a href="https://www.nps.gov/chis/planyourvisit/santa-cruz-island.htm">
-				<img class="img-responsive" src="..\img\Channel Islands Santa Cruz.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" title"Santa Cruz Island" src="..\img\Channel Islands Santa Cruz.jpg" style="width:150px;height:108px;">
 				</a>
 			</th>
 			<th>
 				<a href="https://www.nps.gov/chis/planyourvisit/santa-rosa-island.htm">
-				<img class="img-responsive" src="..\img\Channel Islands Santa Rosa.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" title"Santa Rosa Island" src="..\img\Channel Islands Santa Rosa.jpg" style="width:150px;height:108px;">
 				</a>
 			</th>
 			<th>
 				<a href="https://www.nps.gov/chis/planyourvisit/san-miguel-island.htm">
-				<img class="img-responsive" src="..\img\Channel San Miguel.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" title"San Miguel" src="..\img\Channel San Miguel.jpg" style="width:150px;height:108px;">
 				</a>
 			</th>
 			<th>		
 				<a href="https://www.nps.gov/chis/planyourvisit/santa-barbara-island.htm">				
-				<img class="img-responsive" src="..\img\Channel Island Santa Barbara.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" title"Santa Barbara" src="..\img\Channel Island Santa Barbara.jpg" style="width:150px;height:108px;">
 				</a>
 			</th>
 			
 			<th>		
-				<a href="https://www.nps.gov/chis/planyourvisit/santa-barbara-island.htm">				
-				<img class="img-responsive" src="..\img\Channel Island Anacapa.jpg" style="width:150px;height:108px;">
+				<a href="https://www.nps.gov/chis/planyourvisit/anacapa.htm">				
+				<img class="img-responsive" title"Anacapa" src="..\img\Channel Island Anacapa.jpg" style="width:150px;height:108px;">
 				</a>
 			</th>
 
