--- a/html/home.htm
+++ b/html/home.htm
@@ -20,6 +20,7 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #1A5276;
+    background-color: #1A5276;
 }
 
 li {
@@ -58,27 +59,30 @@ li a:hover {
 </ul><br>
 <br>
 
-        <h1><font size="12" color="black" face="helvetica"><center>California's National Parks</center></font></h1>
+<h1><font size="12" color="black" face="helvetica" ><center>California's National Parks</> </h1>
  
 <table class="centered-table" cellpadding="100">
 <tr>
 <td align="center" valign="center">
-<img src="redwood.jpeg"width="200"height="200" alt="Redwood" class="circular-image"/>
-<br/>
-        <font size="5"><strong><div>Redwood National Park</div></strong>
-</td>
+<a href="file.htm">
+<img title="Redwoods" src="redwood.jpeg"width="200"height="200" alt="Redwood" class="circular-image"/>
+<br />
+<font size="5"><strong><div>Redwood National Park</div>
 <td align="center" valign="center">
-<img src="yosemite.jpg"width="200"height="200" alt="Yosemite"class="circular-image"/>
+<a href="file.htm">
+<img title="Yosemite" src="yosemite.jpg"width="200"height="200" alt="Yosemite"class="circular-image"/>
 <br />
 <font size="5"><strong><div>Yosemite</div>
 </td>
 <td align="center" valign="center">
-<img src="pointreyes.jpg" width="200"height="200" alt="Point Reyes"class="circular-image" />
+<a href="file.htm">
+<img title="Point Reyes" src="pointreyes.jpg" width="200"height="200" alt="Point Reyes"class="circular-image" />
 <br />
 <font size="5"><strong><div>Point Reyes</div>
 </td>
 <td align="center" valign="center">
-<img src="channelislands.jpg" width="200"height="200" alt="Channel Islands"class="circular-image" />
+<a href="file.htm">
+<img title="Channel Islands" src="channelislands.jpg" width="200"height="200" alt="Channel Islands"class="circular-image" />
 <br />
 <font size="5"><strong><div>Channel Islands</div>
 </td>
