commit Kathleen's work

--- a/html/pointreyes1.htm
+++ b/html/pointreyes1.htm
@@ -8,13 +8,13 @@
 		</head> 
 		<body>		
 		
-<ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#redwood">Redwood National Park</a></li>
-  <li><a href="#yosemite">Yosemite</a></li>
-  <li><a href="#point">Point Reyes</a></li>
-  <li><a href="#channel">Channel Islands</a></li>
-</ul><br>
+		<ul>
+		  <li><a href="..">Home</a></li>
+		  <li><a href="./redwoods1.htm">Redwood National Park</a></li>
+		  <li><a href="./yosemite1.htm">Yosemite</a></li>
+		  <li><a href="./pointreyes1.htm">Point Reyes</a></li>
+		  <li><a href="./channel1.htm">Channel Islands</a></li>
+		</ul><br>
 			
 			
 			
