--- a/html/pointreyes2.htm
+++ b/html/pointreyes2.htm
@@ -7,13 +7,13 @@
 		<title>Point Reyes</title>
 		</head> 
 		<body>	
-			<ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#redwood">Redwood National Park</a></li>
-  <li><a href="#yosemite">Yosemite</a></li>
-  <li><a href="#point">Point Reyes</a></li>
-  <li><a href="#channel">Channel Islands</a></li>
-</ul><br>
+		<ul>
+		  <li><a href="..">Home</a></li>
+		  <li><a href="./redwoods1.htm">Redwood National Park</a></li>
+		  <li><a href="./yosemite1.htm">Yosemite</a></li>
+		  <li><a href="./pointreyes1.htm">Point Reyes</a></li>
+		  <li><a href="./channel1.htm">Channel Islands</a></li>
+		</ul><br>
 		<header>		
 		<h2>Point Reyes<h2>	
 		<h3>1 Bear Valley Rd.<h3>
