--- a/html/redwoods1.htm
+++ b/html/redwoods1.htm
@@ -8,13 +8,13 @@
 			<meta name="viewport" content="width=device-width, inital-scale=1.0px">
 	</head>
 		<body style="background-color:powderblue;">
-			<ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#redwood">Redwood National Park</a></li>
-  <li><a href="#yosemite">Yosemite</a></li>
-  <li><a href="#point">Point Reyes</a></li>
-  <li><a href="#channel">Channel Islands</a></li>
-</ul><br>
+	<ul>
+	  <li><a href="..">Home</a></li>
+	  <li><a href="./redwoods1.htm">Redwood National Park</a></li>
+	  <li><a href="./yosemite1.htm">Yosemite</a></li>
+	  <li><a href="./pointreyes1.htm">Point Reyes</a></li>
+	  <li><a href="./channel1.htm">Channel Islands</a></li>
+	</ul><br>
 		<header>		
 		<h1>National Parks 100 years Celebration</h1>
 		<article>
