--- a/index.html
+++ b/index.html
@@ -1,13 +1,93 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>CA National Parks</title>
+</head>
+<style>
+
+html {
+    background: url(california1.png) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size:cover;
+    background-size: cover;
+    
+}
+ul {
+    list-style-type: none;
+    margin: 0 auto;
+    width:4000px;
+    padding: 0;
+    overflow: hidden;
+    background-color: #1A5276;
+    background-color: #1A5276;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: left;
+    padding: 30px 40px ;
+    text-decoration: none;
+    font-family: helvetica;
+    font-size: large;
+}
+
+li a:hover {
+    background-color: #797D7F;
+}
+.centered-table {
+    margin-left: auto;
+    margin-right: auto;
+}
+.circular-image {
+  border-radius: 50%;
+}
+</style>
+
 <ul>
-	<li><a href="./html/home.htm">home.htm</a></li>
-	<li><a href="./html/pointreyes1.htm">pointreyes1.htm</a></li>
-	<li><a href="./html/pointreyes2.htm">pointreyes2.htm</a></li>
-	<li><a href="./html/redwoods1.htm">redwoods1.htm</a></li>
-	<li><a href="./html/redwoods2.htm">redwoods2.htm</a></li>
-	<li><a href="./html/redwoods3.htm">redwoods3.htm</a></li>
-	<li><a href="./html/channel1.htm">channel1.htm</a></li>
-	<li><a href="./html/channel2.htm">channel2.htm</a></li>
-	<li><a href="./html/channel3.htm">channel3.htm</a></li>
-	<li><a href="./html/yosemite1.htm">yosemite1.htm</a></li>
-	<li><a href="./html/yosemite2.htm">yosemite2.htm</a></li>
-</ul>
+  <li><a href=".">Home</a></li>
+  <li><a href="./html/redwoods1.htm">Redwood National Park</a></li>
+  <li><a href="./html/yosemite1.htm">Yosemite</a></li>
+  <li><a href="./html/pointreyes1.htm">Point Reyes</a></li>
+  <li><a href="./html/channel1.htm">Channel Islands</a></li>
+</ul><br>
+<br>
+
+<h1><font size="12" color="black" face="helvetica" ><center>California's National Parks</> </h1>
+ 
+<table class="centered-table" cellpadding="100">
+<tr>
+<td align="center" valign="center">
+<a href="./html/redwoods1.htm">
+<img title="Redwoods" src="../img/redwood.jpeg"width="200"height="200" alt="Redwood" class="circular-image"/>
+<br />
+<font size="5"><strong><div>Redwood National Park</div>
+<td align="center" valign="center">
+<a href="./html/yosemite1.htm">
+<img title="Yosemite" src="../img/yosemite.jpg"width="200"height="200" alt="Yosemite"class="circular-image"/>
+<br />
+<font size="5"><strong><div>Yosemite</div>
+</td>
+<td align="center" valign="center">
+<a href="./html/pointreyes1.htm">
+<img title="Point Reyes" src="../img/pointreyes.jpg" width="200"height="200" alt="Point Reyes"class="circular-image" />
+<br />
+<font size="5"><strong><div>Point Reyes</div>
+</td>
+<td align="center" valign="center">
+<a href="./html/channel1.htm">
+<img title="Channel Islands" src="../img/channelislands.jpg" width="200"height="200" alt="Channel Islands"class="circular-image" />
+<br />
+<font size="5"><strong><div>Channel Islands</div>
+</td>
+
+</tr>
+<div></table >
+
+</body>
+</html>
