--- a/index.html
+++ b/index.html
@@ -64,24 +64,24 @@ li a:hover {
 <tr>
 <td align="center" valign="center">
 <a href="./html/redwoods1.htm">
-<img title="Redwoods" src="../img/redwood.jpeg"width="200"height="200" alt="Redwood" class="circular-image"/>
+<img title="Redwoods" src="./img/redwood.jpeg"width="200"height="200" alt="Redwood" class="circular-image"/>
 <br />
 <font size="5"><strong><div>Redwood National Park</div>
 <td align="center" valign="center">
 <a href="./html/yosemite1.htm">
-<img title="Yosemite" src="../img/yosemite.jpg"width="200"height="200" alt="Yosemite"class="circular-image"/>
+<img title="Yosemite" src="./img/yosemite.jpg"width="200"height="200" alt="Yosemite"class="circular-image"/>
 <br />
 <font size="5"><strong><div>Yosemite</div>
 </td>
 <td align="center" valign="center">
 <a href="./html/pointreyes1.htm">
-<img title="Point Reyes" src="../img/pointreyes.jpg" width="200"height="200" alt="Point Reyes"class="circular-image" />
+<img title="Point Reyes" src="./img/pointreyes.jpg" width="200"height="200" alt="Point Reyes"class="circular-image" />
 <br />
 <font size="5"><strong><div>Point Reyes</div>
 </td>
 <td align="center" valign="center">
 <a href="./html/channel1.htm">
-<img title="Channel Islands" src="../img/channelislands.jpg" width="200"height="200" alt="Channel Islands"class="circular-image" />
+<img title="Channel Islands" src="./img/channelislands.jpg" width="200"height="200" alt="Channel Islands"class="circular-image" />
 <br />
 <font size="5"><strong><div>Channel Islands</div>
 </td>
