--- a/html/Final Team/index.html
+++ b/html/Final Team/index.html
@@ -35,7 +35,7 @@ li a {
     padding: 30px 40px ;
     text-decoration: none;
     font-family: helvetica;
-    font-size: large;
+    font-size: medium;
 }
 
 li a:hover {
@@ -52,15 +52,20 @@ li a:hover {
 
 <a name="top"></a>
 <ul>
-  <li><a href="#">Home</a></li>
-  <li><a href="redwood1.html">Redwood National Park</a></li>
-  <li><a href="yosemitepg1.html">Yosemite</a></li>
-  <li><a href="pointreyespg1.html">Point Reyes</a></li>
-  <li><a href="#">Channel Islands</a></li>
+  <li><a href="#index.html">Home</a></li>
+  <li><a href="redwood1.html">Discover Redwood National Park</a></li>
+  <li><a href="redwoodspg2.html">Explore Redwood National Park</a></li>
+  <li><a href="yosemitepg1.html">Discover Yosemite</a></li>
+  <li><a href="yosemitepg2.html">Explore Yosemite</a></li>
+  <li><a href="pointreyespg1.html">Discover Point Reyes</a></li>
+  <li><a href="pointreyespg2.html">Explore Point Reyes</a></li>
+  <li><a href="#channelislandspg1.html">Discover Channel Islands</a></li>
+  <li><a href="#channelislandspg2">Explore Channel Islands</a></li>
+  <li><a href="#">Accomodations</a></li>
 </ul><br>
 <br>
 
-<h1><font size="12" color="black" face="helvetica" ><center>California's National Parks</> </h1>
+    <h1><font size="12" color="black" face="helvetica"><center>California's National Parks</center></h1>
  
 <table class="centered-table" cellpadding="100">
 <tr>
@@ -82,7 +87,7 @@ li a:hover {
 <font size="5"><strong><div>Point Reyes</div>
 </td>
 <td align="center" valign="center">
-<a href="channelislands.html">
+<a href="channelislandspg1.html">
 <img title="Channel Islands" src="channelislands.jpg" width="200"height="200" alt="Channel Islands"class="circular-image" />
 <br />
 <font size="5"><strong><div>Channel Islands</div>
