--- a/html/Final Team/index.html
+++ b/html/Final Team/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>CA National Parks</title>
-</head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 
 html {
@@ -49,6 +49,7 @@ li a:hover {
   border-radius: 50%;
 }
 </style>
+</head>
 
 <a name="top"></a>
 <ul>
