--- a/html/Final Team/index.html
+++ b/html/Final Team/index.html
@@ -54,7 +54,7 @@ li a:hover {
 <a name="top"></a>
 <ul>
   <li><a href="#index.html">Home</a></li>
-  <li><a href="redwood1.html">Discover Redwood National Park</a></li>
+  <li><a href="Redwood1.html">Discover Redwood National Park</a></li>
   <li><a href="redwoodspg2.html">Explore Redwood National Park</a></li>
   <li><a href="yosemitepg1.html">Discover Yosemite</a></li>
   <li><a href="yosemitepg2.html">Explore Yosemite</a></li>
