--- a/html/Final Team/index.html
+++ b/html/Final Team/index.html
@@ -16,7 +16,7 @@ html {
 ul {
     list-style-type: none;
     margin: 0 auto;
-    width:1350px;
+    width:100%;
     padding: 0;
     overflow: hidden;
     background-color: #1A5276;
@@ -26,13 +26,14 @@ ul {
 
 li {
     float: left;
+    border: 1px solid white;
 }
 
 li a {
     display: block;
     color: white;
     text-align: left;
-    padding: 30px 40px ;
+    padding: 15px 5px ;
     text-decoration: none;
     font-family: helvetica;
     font-size: medium;
