--- a/html/Final Team/index.html
+++ b/html/Final Team/index.html
@@ -6,7 +6,7 @@
 <style>
 
 html {
-    background: url(california1.png) no-repeat center center fixed;
+    background: url(California1.png) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size:cover;
