--- a/html/Final Team/accommodations.html
+++ b/html/Final Team/accommodations.html
@@ -3,19 +3,13 @@
 	<head>
 		<meta charset="UTF-8">		
 		<title>The Channel Islands</title>
-		<h1>Accommodations and Activities Directory</h1>
 		<link rel="stylesheet" href="../css/file6.css">	
-		<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-   		<script src="/scripts/jquery.min.js"></script>
-	   	<script src="/bootstrap/js/bootstrap.min.js"></script>			<meta name="viewport" content="width=device-width, inital-scale=1.0px">
-		<head> 
+		<meta name="viewport" content="width=device-width, inital-scale=1.0px">
+		</head> 
 		<body style="background-color: powderblue;">
 		<div id="page-wrap">	
-		<header>		
-		<h2>The Channel Islands<h2>	
-		<h3>The Channel Islands<h3>
-		<p>Ventura  CA.</p>
-		</header>
+<h1>Accommodations and Activities</h1>
+			<h2> Channel Islands <h2>
 <table>
 			<tr>
 				<td>
