--- a/html/Final Team/accommodations.html
+++ b/html/Final Team/accommodations.html
@@ -14,36 +14,36 @@
 			<tr>
 				<td>
 				<a href="https://www.nps.gov/chis/planyourvisit/outdooractivities.htm">
-				<img class="img-responsive" src="..\img\Channel Islands Boating.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" src="boating.jpg" style="width:300px;height:300px;">
 				</a>
 				</td>
 				<td>
 				<a href="https://www.nps.gov/chis/planyourvisit/backcountry-camping.htm">
-				<img class="img-responsive" src="..\img\Channel island Backcountry Camping.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" src="camping.jpg" style="width:300px;height:300px;">
 				</a>
 				</td>
 			</tr>
 			<tr>
 				<td>
 				<a href="hhttps://www.nps.gov/chis/planyourvisit/eatingsleeping.htm">
-				<img class="img-responsive" src="..\img\Channel Island Eating & Sleeping.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" src="sleeping.jpg" style="width:300px;height:300px;">
 				</a>
 				</td>
 				<td>
 				<a href="https://www.nps.gov/chis/planyourvisit/programs.htm">
-				<img class="img-responsive" src="..\img\Channel Islands Whale Watching.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" src="whale.jpg" style="width:300px;height:300px;">
 				</a>
 				</td>
 			</tr>
 			<tr>
 				<td>
 				<a href="https://www.nps.gov/chis/planyourvisit/permitsandreservations.htm">
-				<img class="img-responsive" src="..\img\Channel Islands Nearby Attractions.jpg" style="width:150px;height:108px;">
+				<img class="img-responsive" src="nearby.jpg" style="width:300px;height:300px;">
 				</a>
 				</td>
 				<td>
-				<a href="http://redwoods.info/category.asp?category=Redwoods">
-				<img class="img-responsive" src="..\img\National Park Passport.jpg" style="width: 150px; height: 108px;">
+				<a href="https://www.nps.gov/chis/planyourvisit/boating.htm">
+				<img class="img-responsive" src="boats" style="width: 300px; height: 300px;">
 				</a>
 				</td>
 			</tr>
