--- a/html/Final Team/accommodations.html
+++ b/html/Final Team/accommodations.html
@@ -38,12 +38,12 @@
 			<tr>
 				<td>
 				<a href="https://www.nps.gov/chis/planyourvisit/permitsandreservations.htm">
-				<img class="img-responsive" src="nearby.jpg" style="width:350px;height:300px;">
+				<img class="img-responsive" src="hike.jpg" style="width:350px;height:300px;">
 				</a>
 				</td>
 				<td>
 				<a href="https://www.nps.gov/chis/planyourvisit/boating.htm">
-				<img class="img-responsive" src="boats" style="width: 350px; height: 300px;">
+				<img class="img-responsive" src="boats.jpg" style="width: 350px; height: 300px;">
 				</a>
 				</td>
 			</tr>
