--- a/html/Final Team/accommodations.html
+++ b/html/Final Team/accommodations.html
@@ -10,6 +10,7 @@
 		<div id="page-wrap">	
 <h1>Accommodations and Activities</h1>
 			<h2> Channel Islands <h2>
+				<h3> Select any photo below for links to helpful sites. </h3>
 <table>
 			<tr>
 				<td>
