--- a/html/Final Team/Redwood1.html
+++ b/html/Final Team/Redwood1.html
@@ -59,7 +59,7 @@ li a:hover {
   <li><a href="pointreyespg2.html">Explore Point Reyes</a></li>
   <li><a href="#channelislandspg1.html">Discover Channel Islands</a></li>
   <li><a href="#channelislandspg2">Explore Channel Islands</a></li>
-  <li><a href="#">Accomodations</a></li>
+  <li><a href="#accommodations.html">Accommodations</a></li>
 </ul><br>
 <br>
 <body>
