--- a/html/Final Team/index.html
+++ b/html/Final Team/index.html
@@ -52,18 +52,17 @@ li a:hover {
 </style>
 </head>
 
-<a name="top"></a>
 <ul>
-  <li><a href="#index.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="Redwood1.html">Discover Redwood National Park</a></li>
   <li><a href="redwoodspg2.html">Explore Redwood National Park</a></li>
   <li><a href="yosemitepg1.html">Discover Yosemite</a></li>
   <li><a href="yosemitepg2.html">Explore Yosemite</a></li>
   <li><a href="pointreyespg1.html">Discover Point Reyes</a></li>
   <li><a href="pointreyespg2.html">Explore Point Reyes</a></li>
-  <li><a href="#channelislandspg1.html">Discover Channel Islands</a></li>
-  <li><a href="#channelislandspg2">Explore Channel Islands</a></li>
-  <li><a href="#accommodations.html">Accommodations</a></li>
+  <li><a href="channelislandspg1.html">Discover Channel Islands</a></li>
+  <li><a href="channelislandspg2">Explore Channel Islands</a></li>
+  <li><a href="accommodations.html">Accommodations</a></li>
 </ul><br>
 <br>
 
