--- a/html/Final Team/pointreyespg1.html
+++ b/html/Final Team/pointreyespg1.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title> Point Reyes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <style>
 
@@ -16,27 +17,25 @@ html {
 ul {
     list-style-type: none;
     margin: 0 auto;
-    width:1600px;
+    width:100%;
     padding: 0;
     overflow: hidden;
     background-color: #1A5276;
     background-color: #1A5276;
 }
-
 li {
     float: left;
+    border: 1px solid white;
 }
-
 li a {
     display: block;
     color: white;
     text-align: left;
-    padding: 30px 40px ;
+    padding: 15px 5px ;
     text-decoration: none;
     font-family: helvetica;
-    font-size: large;
+    font-size: medium;
 }
-
 li a:hover {
     background-color: #797D7F;
 }
@@ -47,20 +46,22 @@ li a:hover {
 .circular-image {
   border-radius: 50%;
 }
-p {
-  background-color: 
-}
 </style>
 
-<a name="top"></a>
 <ul>
-  <li><a href="calparkshome1.html">Home</a></li>
-  <li><a href="#">Redwood National Park</a></li>
-  <li><a href="yosemitepg1.html">Yosemite</a></li>
-  <li><a href="#">Point Reyes</a></li>
-  <li><a href="channelislands.html">Channel Islands</a></li>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="Redwood1.html">Discover Redwood National Park</a></li>
+  <li><a href="redwoodspg2.html">Explore Redwood National Park</a></li>
+  <li><a href="yosemitepg1.html">Discover Yosemite</a></li>
+  <li><a href="yosemitepg2.html">Explore Yosemite</a></li>
+  <li><a href="pointreyespg1.html">Discover Point Reyes</a></li>
+  <li><a href="pointreyespg2.html">Explore Point Reyes</a></li>
+  <li><a href="channelislandspg1.html">Discover Channel Islands</a></li>
+  <li><a href="channelislandspg2">Explore Channel Islands</a></li>
+  <li><a href="accommodations.html">Accommodations</a></li>
 </ul><br>
 <br>
+
 <body>
 <h1><font size="5" color="black" face="helvetica" ><center>Discover Point Reyes</> </h1>
     
