--- a/html/Final Team/accommodations.html
+++ b/html/Final Team/accommodations.html
@@ -6,6 +6,55 @@
 		<link rel="stylesheet" href="../css/file6.css">	
 		<meta name="viewport" content="width=device-width, inital-scale=1.0px">
 		</head> 
+	<style>
+}
+ul {
+    list-style-type: none;
+    margin: 0 auto;
+    width:100%;
+    padding: 0;
+    overflow: hidden;
+    background-color: #1A5276;
+    background-color: #1A5276;
+}
+li {
+    float: left;
+    border: 1px solid white;
+}
+li a {
+    display: block;
+    color: white;
+    text-align: left;
+    padding: 15px 5px ;
+    text-decoration: none;
+    font-family: helvetica;
+    font-size: medium;
+}
+li a:hover {
+    background-color: #797D7F;
+}
+.centered-table {
+    margin-left: auto;
+    margin-right: auto;
+}
+.circular-image {
+  border-radius: 50%;
+}
+</style>
+
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="Redwood1.html">Discover Redwood National Park</a></li>
+  <li><a href="redwoodspg2.html">Explore Redwood National Park</a></li>
+  <li><a href="yosemitepg1.html">Discover Yosemite</a></li>
+  <li><a href="yosemitepg2.html">Explore Yosemite</a></li>
+  <li><a href="pointreyespg1.html">Discover Point Reyes</a></li>
+  <li><a href="pointreyespg2.html">Explore Point Reyes</a></li>
+  <li><a href="channelislandspg1.html">Discover Channel Islands</a></li>
+  <li><a href="channelislandspg2">Explore Channel Islands</a></li>
+  <li><a href="accommodations.html">Accommodations</a></li>
+</ul><br>
+<br>
 		<body style="background-color: powderblue;">
 		<div id="page-wrap">	
 <h1>Accommodations and Activities</h1>
