--- a/html/Final Team/channelislandspg2.html
+++ b/html/Final Team/channelislandspg2.html
@@ -105,6 +105,10 @@ li a:hover {
 				The 27 species sighted in the channel include gray, blue, humpback, minke, 
 				sperm, and pilot whales; orcas; Dall's porpoise; and Risso's, Pacific 
 				white-sided, common, and bottlenose dolphins.
+					<br>
+					A variety of organisms can be found on and around the Channel Islands, from top predators like bald eagles and sharks, to intertidal residents such as seastars and barnaces, to the tiniest parasites living on other animals and plants. For this page we have organized the information into birds, marine animals, terrestrial animals, and paleo animals, although many animals utilize resources from both the ocean and the land.
+<br>
+Because of their isolation and remote nature, the Channel Islands support fewer native animal species than similar habitats on the mainland. Species that reached the islands were aerial, such as birds and bats, or rafted across the water on debris and other material. Over time some vertebrate species evolved into distinct subspecies on the islands. For example, the deer mouse and island fox are recognized as distinct subspecies on each of the islands they occur. A total of 23 endemic terrestrial animals have been identified in the park, including 11 land birds, that are Channel Island subspecies or races.
 				</p>
 				 <footer>
         <p> 
