--- a/html/Final Team/redwoodspg2.html
+++ b/html/Final Team/redwoodspg2.html
@@ -6,14 +6,14 @@
 </head>
 <style>
 
-
-
 html {
-    background-color:
+    background: url(newredlight.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size:cover;
     background-size: cover;
+    
+}
     
 }
 ul {
