--- a/html/Final Team/redwoodspg2.html
+++ b/html/Final Team/redwoodspg2.html
@@ -81,7 +81,9 @@ li a:hover {
         <div><strong>When to Go:</strong></div>
         Year-round. Summer draws highway-clogging crowds, so think about a visit in spring or fall. In both seasons, bird migrations enhance the redwood groves. Rhododendrons burst forth in spring; deciduous trees add color in fall. Rains, welcome to the redwoods but not to visitors, drench the park in winter.
         </p>
-        <table class="centered-table" cellpadding="100">
+<br>
+<h4> Select an image below for more information </h4>
+        <table class="centered-table" cellpadding="30px">
 <tr>
 <td align="center" valign="center">
 <a href="http://redwoods.info/showrecord.asp?id=2464&source=Favorites">
@@ -100,7 +102,7 @@ li a:hover {
 <img title="Redwoods at Night" src="redwoods-against-milky-way.jpg"width="200"height="200" alt="Redwoods at Night" />
 <br />
 </tr>
-<div></table >
+<div></table>
 
         <footer>
         <p> 
