--- a/html/Final Team/redwoodspg2.html
+++ b/html/Final Team/redwoodspg2.html
@@ -82,7 +82,7 @@ li a:hover {
         Year-round. Summer draws highway-clogging crowds, so think about a visit in spring or fall. In both seasons, bird migrations enhance the redwood groves. Rhododendrons burst forth in spring; deciduous trees add color in fall. Rains, welcome to the redwoods but not to visitors, drench the park in winter.
         </p>
 <br>
-<h4> Select an image below for more information </h4>
+<center> <h4> Select an image below for more information </h4> </center>
         <table class="centered-table" cellpadding="30px">
 <tr>
 <td align="center" valign="center">
