--- a/html/Final Team/Redwood1.html
+++ b/html/Final Team/Redwood1.html
@@ -67,7 +67,8 @@ li a:hover {
         The Redwood National Park was established on October 2, 1968 and expanded on March 27, 1978.   In 1850, old-growth redwood forest covered more than 2,000,000 acres (8,100 km2) of the California coast. The northern portion of that area, originally inhabited by Native Americans, attracted many lumbermen and others turned gold miners when a minor gold rush brought them to the region. <iframe width="560" height="315" align="right" padding="20" src="https://www.youtube.com/embed/JPEvDQLezyc" frameborder="0" allowfullscreen> </iframe> Failing in efforts to strike it rich in gold, these men turned toward harvesting the giant trees [4] for booming development in San Francisco and other places on the West Coast. After many decades of unrestricted clear-cut logging, serious efforts toward conservation began. By the 1920s the work of the Save-the-Redwoods League, founded in 1918 to preserve remaining old-growth redwoods, resulted in the establishment of Prairie Creek, Del Norte Coast, and Jedediah Smith Redwoods State Parks among others. By the time the Redwood National Park was established in 1968, nearly 90% of the original redwood trees had been logged. The National Park Service (NPS) and the California Department of Parks and Recreation (CDPR) administratively combined Redwood National Park with the three abutting Redwood State Parks in 1994 for the purpose of cooperative forest management and stabilization of forests and watersheds as a single unit. [5] Located entirely within Del Norte and Humboldt Counties, the four parks, together, protect 45% of all remaining coast redwood (Sequoia sempervirens) old-growth forests, totaling at least 38,982 acres (157.75 km2). These trees are the tallest and one of the most massive tree species on Earth.</p>
 
 
- 
+<br> <br>
+    <center> <h4> More on the Redwoods: </h4> </center>
 <table class="centered-table" cellpadding="100">
 <tr>
 <td align="center" valign="center">
