--- a/html/Final Team/yosemitepg1.html
+++ b/html/Final Team/yosemitepg1.html
@@ -61,9 +61,9 @@ li a:hover {
   <li><a href="channelislandspg2">Explore Channel Islands</a></li>
   <li><a href="accommodations.html">Accommodations</a></li>
 </ul><br>
-<br>
+<br> <br> <br> <br>
 <body>
-<h1><font size="5" color="black" face="helvetica" ><center>Discover Yosemite</> </h1>
+<h1><font size="5" color="black" face="helvetica"><center>Discover Yosemite</center> </h1>
     <p><div><strong>A Brief History:</strong></div> 
         The year was 1890, an act of Congress creates Yosemite National Park, home of such natural wonders as Half Dome and the giant sequoia trees. Environmental trailblazer John Muir (1838-1914) and his colleagues campaigned for the congressional action, which was signed into law by President Benjamin Harrison and paved the way for generations of hikers, campers and nature lovers, along with countless “Don’t Feed the Bears” signs.  <iframe width="560" height="315" align="left" src="https://www.youtube.com/embed/2GmipPf-Krk" frameborder="0" allowfullscreen></iframe> Native Americans were the main residents of the Yosemite Valley, located in California’s Sierra Nevada mountain range, until the 1849 gold rush brought thousands of non-Indian miners and settlers to the region. Tourists and damage to Yosemite Valley’s ecosystem followed. In 1864, to ward off further commercial exploitation, conservationists convinced President Abraham Lincoln to declare Yosemite Valley and the Mariposa Grove of giant sequoias a public trust of California. This marked the first time the U.S. government protected land for public enjoyment and it laid the foundation for the establishment of the national and state park systems.</p>
 
