--- a/html/Final Team/yosemitepg2.html
+++ b/html/Final Team/yosemitepg2.html
@@ -7,9 +7,8 @@
 <style>
 
 
-
 html {
-    background-color:
+    background: url(yosemitelight1.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size:cover;
