--- a/html/Final Team/pointreyespg2.html
+++ b/html/Final Team/pointreyespg2.html
@@ -10,7 +10,7 @@
 
 
 html {
-    background-color:
+    background: url(pointreyeslight.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size:cover;
