--- a/html/Final Team/pointreyespg2.html
+++ b/html/Final Team/pointreyespg2.html
@@ -71,7 +71,7 @@ li a:hover {
     <h3><strong>Things to See</strong></h3>
       </article>
     </header> 
-   <h4> Select a picture for more info: <h4>
+   <h4> Select a picture for more info: </h4>
     <table>
     <tr>
       <th>
