--- a/html/Final Team/channelislandspg1.html
+++ b/html/Final Team/channelislandspg1.html
@@ -7,7 +7,7 @@
 <style>
 
 html {
-    background: url(channelislandslight.jpeg) no-repeat center center fixed;
+    background: url(channelislandslight.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size:cover;
