--- a/html/Final Team/channelislandspg1.html
+++ b/html/Final Team/channelislandspg1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Channel Islnads</title>
+<title> Channel Islands</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <style>
