--- a/html/Final Team/channelislandspg1.html
+++ b/html/Final Team/channelislandspg1.html
@@ -61,11 +61,11 @@ li a:hover {
   <li><a href="channelislandspg2">Explore Channel Islands</a></li>
   <li><a href="accommodations.html">Accommodations</a></li>
 </ul><br>
-<br>
+<br> <br> <br> <br>
 
 <body>	
 		<header>		
-		<h1><font size="5" color="black" face="helvetica" ><center>Discover The Channel Islands</> </h1>	
+		<h1><center>Discover The Channel Islands</center> </h1>	
 		</header>
 		
 
