--- a/html/Final Team/channelislandspg2.html
+++ b/html/Final Team/channelislandspg2.html
@@ -7,12 +7,11 @@
 <style>
 
 html {
-    background: url() no-repeat center center fixed;
+    background: url(channelislandslight.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size:cover;
-    background-size: cover;
-    
+    background-size: cover;   
 }
 ul {
     list-style-type: none;
