--- a/html/Final Team/channelislandspg2.html
+++ b/html/Final Team/channelislandspg2.html
@@ -64,7 +64,8 @@ li a:hover {
 		<header>		
 		<h2> Explore The Channel Islands<h2>	
 		
-		</header>	
+		</header>
+			<h4> select any image below for more info: </h4>
 		<table>
 			<tr>
 				<td>
