--- a/html/Final Team/index.html
+++ b/html/Final Team/index.html
@@ -71,7 +71,7 @@ li a:hover {
 <table class="centered-table" cellpadding="50">
 <tr>
 <td align="center" valign="center">
-<a href="redwood1.html">
+<a href="Redwood1.html">
 <img title="Redwoods" src="redwood.jpeg"width="200"height="200" alt="Redwood" class="circular-image"/>
 <br />
 <font size="5"><strong><div>Redwood National Park</div>
