--- a/html/Final Team/yosemitepg2.html
+++ b/html/Final Team/yosemitepg2.html
@@ -68,6 +68,7 @@ li a:hover {
     <h3><strong>Things to See</strong></h3>
       </article>
     </header> 
+	<h4> Select an image below for more info: </h4>
 		<table>
 		<tr>
 			<th>
