--- a/html/Final Team/pointreyespg2.html
+++ b/html/Final Team/pointreyespg2.html
@@ -75,7 +75,7 @@ li a:hover {
     <table>
     <tr>
       <th>
-        <a href="hhttps://www.nps.gov/pore/learn/nature/mammals.htm">
+        <a href="https://www.nps.gov/pore/learn/nature/mammals.htm">
         <img class="img-responsive" title="Mammals" src="Point Reyes Mammals.jpg" style="width:150px;height:108px;">
         </a>
       </th>
