--- a/html/Final Team/channelislandspg2.html
+++ b/html/Final Team/channelislandspg2.html
@@ -79,7 +79,7 @@ li a:hover {
 				</a>
 				</td>
 				<td>
-				<a href="https://www.nps.gov/chis/planyourvisit/Channel Islands Live.htm">
+				<a href="https://www.nps.gov/chis/planyourvisit/channel-islands-live-nps.htm">
 				<img class="img-responsive" title ="Scuba Diving" src="Channel Islands Live.jpg" style="width:150px;height:108px;">
 				</a>
 				</td>
