--- a/html/Final Team/channelislandspg2.html
+++ b/html/Final Team/channelislandspg2.html
@@ -84,7 +84,7 @@ li a:hover {
 				</a>
 				</td>
 				<td>
-				<a href="https://www.nps.gov/chis/planyourvisit/ seal and sea lion viewing.htm">
+				<a href="https://www.nps.gov/chis/planyourvisit/seal-and-sea-lion-viewing.htm">
 				<img class="img-responsive" title=" Seal Lions" src="Channel Islands seal and Sea Lion Viewing.jpg" style="width:150px;height:108px;">
 				</a>
 				</td>
