--- a/html/Final Team/accommodations.html
+++ b/html/Final Team/accommodations.html
@@ -72,7 +72,7 @@ li a:hover {
 			</tr>
 			<tr>
 				<td>
-				<a href="hhttps://www.nps.gov/chis/planyourvisit/eatingsleeping.htm">
+				<a href="https://www.nps.gov/chis/planyourvisit/eatingsleeping.htm">
 				<img class="img-responsive" src="sleeping.jpg" style="width:350px;height:300px;">
 				</a>
 				</td>
