--- a/html/Final Team/yosemitepg2.html
+++ b/html/Final Team/yosemitepg2.html
@@ -58,7 +58,7 @@ li a:hover {
   <li><a href="pointreyespg1.html">Discover Point Reyes</a></li>
   <li><a href="pointreyespg2.html">Explore Point Reyes</a></li>
   <li><a href="channelislandspg1.html">Discover Channel Islands</a></li>
-  <li><a href="channelislandspg2">Explore Channel Islands</a></li>
+  <li><a href="channelislandspg2.html">Explore Channel Islands</a></li>
   <li><a href="accommodations.html">Accommodations</a></li>
 </ul><br>
 
