--- a/html/Final Team/accommodations.html
+++ b/html/Final Team/accommodations.html
@@ -9,7 +9,7 @@
 ul {
     list-style-type: none;
     margin: 0 auto;
-    width:100%;
+    width:auto;
     padding: 0;
     overflow: hidden;
     background-color: #1A5276;
@@ -23,7 +23,7 @@ li a {
     display: block;
     color: white;
     text-align: left;
-    padding: 15px 5px ;
+    padding: 20px 1px ;
     text-decoration: none;
     font-family: helvetica;
     font-size: medium;
