--- a/html/Final Team/channelislandspg2.html
+++ b/html/Final Team/channelislandspg2.html
@@ -16,7 +16,7 @@ html {
 ul {
     list-style-type: none;
     margin: 0 auto;
-    width:100%;
+    width:auto;
     padding: 0;
     overflow: hidden;
     background-color: #1A5276;
@@ -30,7 +30,7 @@ li a {
     display: block;
     color: white;
     text-align: left;
-    padding: 15px 5px ;
+    padding: 20px 1px ;
     text-decoration: none;
     font-family: helvetica;
     font-size: medium;
